--- a/forest/test.ipynb
+++ b/forest/test.ipynb
@@ -23,7 +23,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read time = 2.0254478454589844 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "warnings.filterwarnings('ignore')\n",
     "pd.set_option('display.max_columns', 1000)\n",
@@ -35,9 +43,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Dimension:\n",
+      "Number of Records: 581012\n",
+      "Number of Features: 55\n"
+     ]
+    }
+   ],
    "source": [
     "print('Data Dimension:')\n",
     "print('Number of Records:', data.shape[0])\n",
@@ -840,12 +858,21 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train test split time = 0.5486798286437988 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "target = data.Cover_Type\n",
     "train = data.drop(['Cover_Type'], axis = 1)\n",
+    "# models_results = dict()\n",
     "\n",
     "start_time = time.time()\n",
     "x_train, x_test, y_train, y_test = train_test_split(train, target, test_size=0.25, random_state=16)\n",
@@ -875,18 +902,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "ExtraTreesClassifier(max_features=10, n_estimators=200)"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ExtraTreesClassifier train time = 86.6052839756012 seconds\n"
+     ]
     }
    ],
    "source": [
@@ -900,143 +924,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trees_result = trees.predict(x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2 2 6 ... 1 2 2]\n"
+      "ExtraTreesClassifier predict time = 8.230011940002441 seconds\n"
      ]
-    }
-   ],
-   "source": [
-    "print(trees_result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sub_test = pd.DataFrame(data={'Id': x_test.index.values, 'Cover_Type': trees_result})\n",
-    "sub_test.to_csv(\"Results.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            Id  Cover_Type\n",
-      "0       433102           2\n",
-      "1        87269           2\n",
-      "2       245488           6\n",
-      "3       189165           1\n",
-      "4       307227           1\n",
-      "...        ...         ...\n",
-      "174299   77818           2\n",
-      "174300  233801           2\n",
-      "174301  528012           1\n",
-      "174302  502555           2\n",
-      "174303  549162           2\n",
-      "\n",
-      "[174304 rows x 2 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(sub_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9584999965577303"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "start_time = time.time()\n",
-    "trees.score(x_test, y_test)\n",
-    "print(\"ExtraTreesClassifier score time = {} seconds\".format(time.time() - start_time))"
+    "trees_result = trees.predict(x_test)\n",
+    "print(\"ExtraTreesClassifier predict time = {} seconds\".format(time.time() - start_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-81-a7a1106ebba4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mneighbors\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m25\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mknn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mKNeighborsClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_neighbors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mneighbors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mknn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneighbors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\": \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mknn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.8/site-packages/sklearn/neighbors/_base.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y)\u001b[0m\n\u001b[1;32m   1155\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_y\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_y\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1156\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1157\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_fit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1158\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1159\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_more_tags\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.8/site-packages/sklearn/neighbors/_base.py\u001b[0m in \u001b[0;36m_fit\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    454\u001b[0m                                   **self.effective_metric_params_)\n\u001b[1;32m    455\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_fit_method\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'kd_tree'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 456\u001b[0;31m             self._tree = KDTree(X, self.leaf_size,\n\u001b[0m\u001b[1;32m    457\u001b[0m                                 \u001b[0mmetric\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meffective_metric_\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    458\u001b[0m                                 **self.effective_metric_params_)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ExtraTreesClassifier accuracy time = 0.008679866790771484 seconds\n",
+      "ExtraTreesClassifier accuracy:  0.9578046580793512\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
-    "for neighbors in range(1, 25):\n",
-    "    knn = KNeighborsClassifier(n_neighbors=neighbors)\n",
-    "    start_time = time.time()\n",
-    "    knn.fit(x_train, y_train)\n",
-    "    print(\"KNeighborsClassifier{} train time = {} seconds\".format(neighbors, time.time() - start_time))\n",
-    "    start_time = time.time()\n",
-    "    print(neighbors, \": \", knn.score(x_test, y_test))\n",
-    "    print(\"KNeighborsClassifier{} score time = {} seconds\".format(neighbors, time.time() - start_time))"
+    "start_time = time.time()\n",
+    "extraTreesClassifier_accuracy = accuracy_score(y_test, trees_result)\n",
+    "print(\"ExtraTreesClassifier accuracy time = {} seconds\".format(time.time() - start_time))\n",
+    "print(\"ExtraTreesClassifier accuracy: \", extraTreesClassifier_accuracy)"
    ]
   },
   {
@@ -1062,57 +985,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "knn_neighbors = []\n",
+    "knn_results = []\n",
+    "for neighbors in range(5, 6):\n",
+    "    knn_neighbors.append(neighbors)\n",
+    "    knn = KNeighborsClassifier(n_neighbors=neighbors)\n",
+    "#     start_time = time.time()\n",
+    "    knn.fit(x_train, y_train)\n",
+    "#     print(\"KNeighborsClassifier{} train time = {} seconds\".format(neighbors, time.time() - start_time))\n",
+    "\n",
+    "#     start_time = time.time()\n",
+    "    knn_predict_result = knn.predict(x_test)\n",
+    "#     print(\"KNeighborsClassifier{} predict time = {} seconds\".format(neighbors, time.time() - start_time))\n",
+    "    \n",
+    "#     start_time = time.time()\n",
+    "    accuracy = accuracy_score(y_test, knn_predict_result)\n",
+    "#     print(\"KNeighborsClassifier{} accuracy time = {} seconds\".format(neighbors, time.time() - start_time))\n",
+    "#     print(\"KNeighborsClassifier{} accuracy\".format(neighbors), \": \", accuracy)\n",
+    "\n",
+    "    \n",
+    "    knn_results.append(accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neighbors=5, accuracy=0.9676151267099474\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index in range(len(knn_neighbors)):\n",
+    "    print(\"Neighbors={}, accuracy={}\".format(knn_neighbors[index], knn_results[index]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
-       "              colsample_bynode=1, colsample_bytree=1, gamma=0, gpu_id=-1,\n",
-       "              importance_type='gain', interaction_constraints='',\n",
-       "              learning_rate=0.300000012, max_delta_step=0, max_depth=6,\n",
-       "              min_child_weight=1, missing=nan, monotone_constraints='()',\n",
-       "              n_estimators=100, n_jobs=0, num_parallel_tree=1,\n",
-       "              objective='multi:softprob', random_state=0, reg_alpha=0,\n",
-       "              reg_lambda=1, scale_pos_weight=None, subsample=1,\n",
-       "              tree_method='exact', validate_parameters=1, verbosity=None)"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBClassifier train time = 477.46629881858826 seconds\n"
+     ]
     }
    ],
    "source": [
     "import xgboost\n",
     "\n",
-    "model = xgboost.XGBClassifier()\n",
+    "xgboost_model = xgboost.XGBClassifier()\n",
     "start_time = time.time()\n",
-    "model.fit(x_train, y_train)\n",
+    "xgboost_model.fit(x_train, y_train)\n",
     "print(\"XGBClassifier train time = {} seconds\".format(time.time() - start_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "XGBoost predict time = 2.3058087825775146 seconds\n",
+      "XGBoost accuracy time = 0.00832819938659668 seconds\n",
       "XGBoost accuracy:  0.8691868670526598\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.metrics import accuracy_score\n",
     "start_time = time.time()\n",
-    "print(\"XGBoost accuracy: \", accuracy_score(y_test, [round(item) for item in model.predict(x_test)]))\n",
-    "print(\"XGBoost accuracy time = {} seconds\".format(time.time() - start_time))"
+    "xgboost_result = xgboost_model.predict(x_test)\n",
+    "print(\"XGBoost predict time = {} seconds\".format(time.time() - start_time))\n",
+    "\n",
+    "start_time = time.time()\n",
+    "xgboost_model_accuracy = accuracy_score(y_test, xgboost_result)\n",
+    "print(\"XGBoost accuracy time = {} seconds\".format(time.time() - start_time))\n",
+    "print(\"XGBoost accuracy: \", xgboost_model_accuracy)"
    ]
   },
   {
@@ -1138,79 +1125,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RandomForestClassifier train time = 168.16315174102783 seconds\n"
+      "RandomForestClassifier train time = 150.61444902420044 seconds\n"
      ]
     }
    ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "model = RandomForestClassifier(n_estimators = 100, max_features=10)\n",
+    "randomForestClassifier = RandomForestClassifier(n_estimators = 100, max_features=10)\n",
     "start_time = time.time()\n",
-    "model.fit(x_train, y_train)\n",
+    "randomForestClassifier.fit(x_train, y_train)\n",
     "print(\"RandomForestClassifier train time = {} seconds\".format(time.time() - start_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9591953350361094\n",
-      "RandomForestClassifier score time = 5.7700629234313965 seconds\n"
+      "RandomForestClassifier predict time = 5.32769513130188 seconds\n",
+      "RandomForestClassifier accuracy time = 0.0064198970794677734 seconds\n",
+      "RandomForestClassifier accuracy:  0.959477601151095\n"
      ]
     }
    ],
    "source": [
     "start_time = time.time()\n",
-    "print(model.score(x_test, y_test))\n",
-    "print(\"RandomForestClassifier score time = {} seconds\".format(time.time() - start_time))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.svm import SVC\n",
+    "randomForest_result = randomForestClassifier.predict(x_test)\n",
+    "print(\"RandomForestClassifier predict time = {} seconds\".format(time.time() - start_time))\n",
     "\n",
-    "svclassifier = SVC(kernel='linear')\n",
     "start_time = time.time()\n",
-    "svclassifier.fit(x_train, y_train)\n",
-    "print(\"SVC linear train time = {} seconds\".format(time.time() - start_time))"
+    "randomForest_accuracy = accuracy_score(y_test, randomForest_result)\n",
+    "print(\"RandomForestClassifier accuracy time = {} seconds\".format(time.time() - start_time))\n",
+    "print(\"RandomForestClassifier accuracy: \", randomForest_accuracy)"
    ]
   },
   {
@@ -1218,21 +1176,56 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "start_time = time.time()\n",
-    "print(\"SVC accuracy: \", accuracy_score(y_test, [round(item) for item in svclassifier.predict(x_test)]))\n",
-    "print(\"SVC accuracy time = {} seconds\".format(time.time() - start_time))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "start_time = time.time()\n",
-    "print(\"SVC score: \", svclassifier.score(x_test, y_test))\n",
-    "print(\"SVC score time = {} seconds\".format(time.time() - start_time))"
+    "# from sklearn.svm import SVC\n",
+    "\n",
+    "# svclassifier = SVC(kernel='linear')\n",
+    "# start_time = time.time()\n",
+    "# svclassifier.fit(x_train, y_train)\n",
+    "# print(\"SVC linear train time = {} seconds\".format(time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# start_time = time.time()\n",
+    "# print(\"SVC accuracy: \", accuracy_score(y_test, [round(item) for item in svclassifier.predict(x_test)]))\n",
+    "# print(\"SVC accuracy time = {} seconds\".format(time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# start_time = time.time()\n",
+    "# print(\"SVC score: \", svclassifier.score(x_test, y_test))\n",
+    "# print(\"SVC score time = {} seconds\".format(time.time() - start_time))"
    ]
   }
  ],
