add xgboost stats

--- a/forest/test.ipynb
+++ b/forest/test.ipynb
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,13 +1290,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# optimized_normalized_data['Soil_Type'] = optimized_normalized_data['Soil_Type'].astype('category')\n",
     "# optimized_normalized_data['Wilderness'] = optimized_normalized_data['Wilderness'].astype('category')\n",
-    "# optimized_normalized_data['Cover_Type'] = optimized_normalized_data['Cover_Type'].astype('category')"
+    "optimized_normalized_data['Cover_Type'] = optimized_normalized_data['Cover_Type'].astype('category')"
    ]
   },
   {
@@ -1797,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1884,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2322,7 +2322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -2331,16 +2331,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XGBClassifier train time = 45.62470984458923 seconds\n",
-      "XGBoost predict time = 0.7867145538330078 seconds\n",
-      "XGBoost accuracy:  0.87109388446366\n"
+      "XGBClassifier train time = 324.51487827301025 seconds\n",
+      "XGBoost predict time = 4.248349905014038 seconds\n",
+      "XGBoost accuracy:  0.9544105801601344\n"
      ]
     }
    ],
    "source": [
     "import xgboost\n",
     "\n",
-    "xgboost_model = xgboost.XGBClassifier()\n",
+    "xgboost_model = xgboost.XGBClassifier(n_estimators=100, max_depth=10)\n",
     "\n",
     "start_time = time.time()\n",
     "xgboost_model.fit(x_train, y_train)\n",
@@ -3025,7 +3025,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
