--- a/forest/data1/research.ipynb
+++ b/forest/data1/research.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -152,6 +152,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Elevation</th>\n",
        "      <th>Aspect</th>\n",
        "      <th>Slope</th>\n",
        "      <th>Horizontal_Distance_To_Hydrology</th>\n",
@@ -175,9 +176,11 @@
        "      <td>581012.000000</td>\n",
        "      <td>581012.000000</td>\n",
        "      <td>581012.000000</td>\n",
+       "      <td>581012.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
+       "      <td>2959.365301</td>\n",
        "      <td>155.656807</td>\n",
        "      <td>14.103704</td>\n",
        "      <td>269.428217</td>\n",
@@ -190,6 +193,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
+       "      <td>279.984734</td>\n",
        "      <td>111.913721</td>\n",
        "      <td>7.488242</td>\n",
        "      <td>212.549356</td>\n",
@@ -202,6 +206,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
+       "      <td>1859.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -214,6 +219,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
+       "      <td>2809.000000</td>\n",
        "      <td>58.000000</td>\n",
        "      <td>9.000000</td>\n",
        "      <td>108.000000</td>\n",
@@ -226,6 +232,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
+       "      <td>2996.000000</td>\n",
        "      <td>127.000000</td>\n",
        "      <td>13.000000</td>\n",
        "      <td>218.000000</td>\n",
@@ -238,6 +245,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
+       "      <td>3163.000000</td>\n",
        "      <td>260.000000</td>\n",
        "      <td>18.000000</td>\n",
        "      <td>384.000000</td>\n",
@@ -250,6 +258,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
+       "      <td>3858.000000</td>\n",
        "      <td>360.000000</td>\n",
        "      <td>66.000000</td>\n",
        "      <td>1397.000000</td>\n",
@@ -265,45 +274,45 @@
        "</div>"
       ],
       "text/plain": [
-       "              Aspect          Slope  Horizontal_Distance_To_Hydrology  \\\n",
-       "count  581012.000000  581012.000000                     581012.000000   \n",
-       "mean      155.656807      14.103704                        269.428217   \n",
-       "std       111.913721       7.488242                        212.549356   \n",
-       "min         0.000000       0.000000                          0.000000   \n",
-       "25%        58.000000       9.000000                        108.000000   \n",
-       "50%       127.000000      13.000000                        218.000000   \n",
-       "75%       260.000000      18.000000                        384.000000   \n",
-       "max       360.000000      66.000000                       1397.000000   \n",
+       "           Elevation         Aspect          Slope  \\\n",
+       "count  581012.000000  581012.000000  581012.000000   \n",
+       "mean     2959.365301     155.656807      14.103704   \n",
+       "std       279.984734     111.913721       7.488242   \n",
+       "min      1859.000000       0.000000       0.000000   \n",
+       "25%      2809.000000      58.000000       9.000000   \n",
+       "50%      2996.000000     127.000000      13.000000   \n",
+       "75%      3163.000000     260.000000      18.000000   \n",
+       "max      3858.000000     360.000000      66.000000   \n",
        "\n",
-       "       Vertical_Distance_To_Hydrology  Horizontal_Distance_To_Roadways  \\\n",
-       "count                   581012.000000                    581012.000000   \n",
-       "mean                        46.418855                      2350.146611   \n",
-       "std                         58.295232                      1559.254870   \n",
-       "min                       -173.000000                         0.000000   \n",
-       "25%                          7.000000                      1106.000000   \n",
-       "50%                         30.000000                      1997.000000   \n",
-       "75%                         69.000000                      3328.000000   \n",
-       "max                        601.000000                      7117.000000   \n",
+       "       Horizontal_Distance_To_Hydrology  Vertical_Distance_To_Hydrology  \\\n",
+       "count                     581012.000000                   581012.000000   \n",
+       "mean                         269.428217                       46.418855   \n",
+       "std                          212.549356                       58.295232   \n",
+       "min                            0.000000                     -173.000000   \n",
+       "25%                          108.000000                        7.000000   \n",
+       "50%                          218.000000                       30.000000   \n",
+       "75%                          384.000000                       69.000000   \n",
+       "max                         1397.000000                      601.000000   \n",
        "\n",
-       "       Hillshade_9am  Hillshade_Noon  Hillshade_3pm  \\\n",
-       "count  581012.000000   581012.000000  581012.000000   \n",
-       "mean      212.146049      223.318716     142.528263   \n",
-       "std        26.769889       19.768697      38.274529   \n",
-       "min         0.000000        0.000000       0.000000   \n",
-       "25%       198.000000      213.000000     119.000000   \n",
-       "50%       218.000000      226.000000     143.000000   \n",
-       "75%       231.000000      237.000000     168.000000   \n",
-       "max       254.000000      254.000000     254.000000   \n",
+       "       Horizontal_Distance_To_Roadways  Hillshade_9am  Hillshade_Noon  \\\n",
+       "count                    581012.000000  581012.000000   581012.000000   \n",
+       "mean                       2350.146611     212.146049      223.318716   \n",
+       "std                        1559.254870      26.769889       19.768697   \n",
+       "min                           0.000000       0.000000        0.000000   \n",
+       "25%                        1106.000000     198.000000      213.000000   \n",
+       "50%                        1997.000000     218.000000      226.000000   \n",
+       "75%                        3328.000000     231.000000      237.000000   \n",
+       "max                        7117.000000     254.000000      254.000000   \n",
        "\n",
-       "       Horizontal_Distance_To_Fire_Points  \n",
-       "count                       581012.000000  \n",
-       "mean                          1980.291226  \n",
-       "std                           1324.195210  \n",
-       "min                              0.000000  \n",
-       "25%                           1024.000000  \n",
-       "50%                           1710.000000  \n",
-       "75%                           2550.000000  \n",
-       "max                           7173.000000  "
+       "       Hillshade_3pm  Horizontal_Distance_To_Fire_Points  \n",
+       "count  581012.000000                       581012.000000  \n",
+       "mean      142.528263                         1980.291226  \n",
+       "std        38.274529                         1324.195210  \n",
+       "min         0.000000                            0.000000  \n",
+       "25%       119.000000                         1024.000000  \n",
+       "50%       143.000000                         1710.000000  \n",
+       "75%       168.000000                         2550.000000  \n",
+       "max       254.000000                         7173.000000  "
       ]
      },
      "execution_count": 3,
@@ -312,7 +321,7 @@
     }
    ],
    "source": [
-    "data.loc[:, 'Aspect' : 'Horizontal_Distance_To_Fire_Points'].describe()"
+    "data.loc[:, 'Elevation' : 'Horizontal_Distance_To_Fire_Points'].describe()"
    ]
   },
   {
@@ -597,6 +606,33 @@
    "source": [
     "for index, item in enumerate(data['Cover_Type'].value_counts(sort=False)):\n",
     "    print('Cover_Type{}'.format(index + 1), ' -> ', '{}%'.format((\"%.2f\" % (item / len(data) * 100))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    211840\n",
+       "2    283301\n",
+       "3     35754\n",
+       "4      2747\n",
+       "5      9493\n",
+       "6     17367\n",
+       "7     20510\n",
+       "Name: Cover_Type, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Cover_Type'].value_counts(sort=False)"
    ]
   },
   {
@@ -3830,7 +3866,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
